--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf8">
+    <link rel="stylesheet"  href="style.css">
+    <title>Classmate Help</title>
+  </head>
+</html>
