--- a/www/index.html
+++ b/www/index.html
@@ -5,4 +5,15 @@
     <link rel="stylesheet"  href="style.css">
     <title>Classmate Help</title>
   </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li onclick="topage("home")">Home</li>
+          <li onclick="topage("js")">Javascript</li>
+          <li onclick="topage("php")">PHP</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
